still js loading issue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/go.min.js"></script>
 
     <script>hljs.highlightAll();</script>
-
+    <script src="script.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -32,7 +32,6 @@
         rel="stylesheet">
 
 </head>
-<script src="/script.js"></script>
 <body>
     <!-- This div includes all of the content displayed on the webpage -->
     <div class="box">
